; ModuleID = '/home/carl/AnghaBench/disque/deps/jemalloc/test/src/extr_mtx.c_mtx_init.c'
source_filename = "/home/carl/AnghaBench/disque/deps/jemalloc/test/src/extr_mtx.c_mtx_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@PTHREAD_MUTEX_DEFAULT = common dso_local global i32 0, align 4
@_CRT_SPINCOUNT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mtx_init(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %5 = call i64 @pthread_mutexattr_init(i32* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %19

8:                                                ; preds = %1
  %9 = load i32, i32* @PTHREAD_MUTEX_DEFAULT, align 4
  %10 = call i32 @pthread_mutexattr_settype(i32* %4, i32 %9)
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = call i64 @pthread_mutex_init(i64* %12, i32* %4)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %8
  %16 = call i32 @pthread_mutexattr_destroy(i32* %4)
  store i32 1, i32* %2, align 4
  br label %19

17:                                               ; preds = %8
  %18 = call i32 @pthread_mutexattr_destroy(i32* %4)
  store i32 0, i32* %2, align 4
  br label %19

19:                                               ; preds = %17, %15, %7
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i64 @pthread_mutexattr_init(i32*) #1

declare dso_local i32 @pthread_mutexattr_settype(i32*, i32) #1

declare dso_local i64 @pthread_mutex_init(i64*, i32*) #1

declare dso_local i32 @pthread_mutexattr_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
